v0.5.5, <RELEASE DATE HERE>:

* Fixed Visual Studio filters not showing all the files in their correct folder/subfolder.

----------------------------------------------------------------

v0.5.4, 17/01/2025:

* Fixed builds getting skipped if Builder can't find the .build_info file or if the expected .build_info file name changes.
* Fixed path from Visual Studio solution to Builder being null if the input file didn't also contain a path.

----------------------------------------------------------------

v0.5.3, 07/01/2025:

* Builder now officially ships under the MIT license.
	* I forgot to change the license when I made Builder publicly available - whoops!

----------------------------------------------------------------

v0.5.2, 05/01/2025:

* Fixed a crash when sometimes trying to generate a .sln file.
* Fixed a crash when sometimes trying to build from Visual Studio.
* Fixed the binary folder being called "null" when the build source file doesn't contain a path.
* Fixed "default" build config not getting written to .build_info file in a default build.
* Fixed source files sometimes not getting resolved when the build source file contains a path.
* Fixed duplicate files sometimes not getting treated as duplicates when tracking them in the .build_info file.
* Fixed source file paths sometimes being null when serializing a .build_info file.
* Better output in the console when generating a Visual Studio solution.

----------------------------------------------------------------

v0.5.1, 01/01/2025:

* Some of the documentation was out of date; can't be having that!

----------------------------------------------------------------

v0.5.0, 28/12/2024:

* BuildConfig::source_files now supports wildcards.
	* This will make adding source files to your projects a lot less tedious, since you now won't need to tell Builder about every individual new source file that you add.